<resources>
    <string name="app_name">My Movies</string>
    <string name="title">Movie Title</string>
    <string name="genre">Genre</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="titlehint">Enter movie title here</string>
    <string name="genrehint">Enter genre here</string>
    <string name="yearhint">Enter year of release here</string>
    <string name="btnInsrt">INSERT</string>
    <string name="btnsl">SHOW LIST</string>
    <string-array name="rating">
        <item>G</item>
        <item>PG</item>
        <item>PG13</item>
        <item>NC16</item>
        <item>M18</item>
        <item>R21</item>
    </string-array>
    <string name="btnlv">SHOW ALL PG-13 MOVIES</string>
    <string name="tvID">Movie ID</string>
    <string name="tvTitle">Movie Title</string>
    <string name="tvGenre">Genre</string>
    <string name="tvYear">Year</string>
    <string name="tvRating">Rating</string>
    <string name="btnUpdate">UPDATE</string>
    <string name="btnDelete">DELETE</string>
    <string name="btnCancel">CANCEL</string>

</resources>