<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/titlehint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/genre" />

    <EditText
        android:id="@+id/etGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/genrehint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year" />

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/yearhint"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rating" />

    <Spinner
        android:id="@+id/spinnerRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rating"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btninsrt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="2.5dp"
            android:layout_weight="1"
            android:text="@string/btnInsrt" />

        <Button
            android:id="@+id/btnSL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2.5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:text="@string/btnsl" />
    </LinearLayout>

</LinearLayout>