<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvID" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvEdtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvTitle" />

    <EditText
        android:id="@+id/etEdtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvEdtGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvGenre" />

    <EditText
        android:id="@+id/etEdtGenre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvEdtYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvYear" />

    <EditText
        android:id="@+id/etEdtYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvEdtRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvRating" />

    <Spinner
        android:id="@+id/spnEdtRate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/rating"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/btnUpdate" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_weight="@integer/material_motion_duration_long_1"
            android:text="@string/btnDelete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btnCancel" />
    </LinearLayout>
</LinearLayout>